# LogForge

./: .env  .gitignore  README.md  docker-compose.yml  go.mod  go.sum  init.sql  main.go  pyproject.toml
app/: db.py  main.py  models.py
app/routes/: logs.py
client/cmd/: go.mod  go.sum  main.go
cmd/: main.go
cmd/logserver/: main.go
db/: db.go  minio.go  minio_utils.go
handlers/: auth_handler.go  log_handler.go  query_handler.go
minio-container/: Dockerfile
models/: log_model.go
parquet/: utils.go  write.go
